# compiler-construction

./: .gitignore  CMakeLists.txt  README.md  main.py
include/: compile.h  keywords.h  macros.h  mini_compiler.h  scanner.h  token.h  utils.h
programs/: compiler.c
sources/: compile.c  scanner.c  token.c  utils.c
